.kube-workflow/env/prod/templates/travail-emploi.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - transco.travail-emploi.gouv.fr
      secretName: www-transco-crt
  rules:
    - host: transco.travail-emploi.gouv.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: http
